fix alignment

--- a/src/app/components/sales-leads-form/sales-leads-form.component.scss
+++ b/src/app/components/sales-leads-form/sales-leads-form.component.scss
@@ -27,7 +27,6 @@
 
   .invalid-feedback {
     font-size: cRems(10px);
-    text-align: right;
   }
 }
 
